--- a/nbs/nbdev.yml
+++ b/nbs/nbdev.yml
@@ -2,8 +2,8 @@ project:
   output-dir: _docs
 
 website:
-  title: "pretty-ctypes"
-  site-url: "https://xl0.github.io/pretty-ctypes"
-  description: "Lets you visualize and compare nested C structures and arrays in Python"
+  title: "lovely-ctypes"
+  site-url: "https://xl0.github.io/lovely-ctypes"
+  description: "Visualize and compare nested C structures and arrays in Python"
   repo-branch: master
-  repo-url: "https://github.com/xl0/pretty-ctypes"
+  repo-url: "https://github.com/xl0/lovely-ctypes"
