--- a/settings.ini
+++ b/settings.ini
@@ -3,7 +3,7 @@
 # See https://github.com/AnswerDotAI/nbdev/blob/main/settings.ini for examples.
 
 ### Python library ###
-repo = pretty-ctypes
+repo = lovely-ctypes
 lib_name = %(repo)s
 version = 0.0.1
 min_python = 3.9
@@ -12,7 +12,7 @@ black_formatting = False
 
 ### nbdev ###
 doc_path = _docs
-lib_path = pretty_ctypes
+lib_path = lovely_ctypes
 nbs_path = nbs
 recursive = True
 tst_flags = notest
@@ -32,7 +32,7 @@ audience = Developers
 author = Alexey
 author_email = alexey.zaytsev@gmail.com
 copyright = 2025 onwards, %(author)s
-description = Lets you visualize and compare nested C structures and arrays in Python
+description = Visualize and compare nested C structures and arrays in Python
 keywords = nbdev jupyter notebook python
 language = English
 status = 3
